Fix for table alignment on reports summary page

--- a/web/cobrands/sass/_dashboard.scss
+++ b/web/cobrands/sass/_dashboard.scss
@@ -205,7 +205,7 @@
     }
 
     th {
-        text-align: inherit;
+        text-align: left;
     }
 
     tbody tr:nth-child(odd) > * {
